TODO
* implement item values
* fill item list
* item list item free function 

Tools
* nk2export
  - export item data (export handle)
* nk2info
  - print amount of items
  - create info handle

Deployment:
* create debian package files
* update macosx package files
* update msvcpp files (implement libbfio)

20090219
* Worked on initial version
* Correction in error output

20090218
* Worked on initial version
* small update of manuals

20090202
* Worked on initial version
* Added libfmapi

20090131
* Worked on initial version
* Added item functions

20090129
* Worked on initial version
* Changed item separator to item value entries

20090128
* Created initial version based on libpff for the library structure and common code
